# torch_semantic_segmentation

./: README.md  pyproject.toml  run_pylint.ps1
.github/workflows/: ci.yml
notebook/: demo_unet_jsrt_dataset.ipynb  demo_unet_square_dataset.ipynb  main.ipynb
src/benchmark/: report.py  test.py  train.py
src/dataset/: custom_image_mask_dataset.py  jsrt_dataset.py  square_dataset.py
tests/benchmark/: mock_data.py  test_metrics.py  test_report.py
